clang/test/BSC/Positive/NullabilityCheck/chained_pointer_assignment.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

_Safe void safe_free(void *_Owned p); // expected-note 2 {{passing argument to parameter 'p' here}}

void test1() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    if (p1 != nullptr) {
        int *p3 = (int *_Nonnull)p1;
    }
    if (p2 != nullptr) {
        int *p4 = (int *_Nonnull)p2;
    }
}

void test2() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    if (p1 != nullptr) {
        int *_Owned p3 = __take_from_raw(p1);
        safe_free(p3); // expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'void *_Owned'}}
    }
    if (p2 != nullptr) {
        int *_Owned p4 = __take_from_raw(p2);
        safe_free(p4); // expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'void *_Owned'}}
    }
}

void test3() {
    int *p1, *p2;
    p1 = p2 = nullptr;
    if (p1 != nullptr) {
        int *_Borrow p3 = (int *_Borrow)p1;
    }
    if (p2 != nullptr) {
        int *_Borrow p4 = (int *_Borrow)p2;
    }
}
